# version_macro

./: Cargo.toml  README.md
src/: lib.rs
